[package]
name = "marsh_compass"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Kevin Chen <chen.kevin.f@gmail.com>"]
# description = "TODO"
repository = "https://github.com/kfc35/marsh_compass"
readme = "README.md"
keywords = ["gamedev", "bevy"]
categories = ["game-development"]

[dependencies]
bevy = "0.18.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
