[package]
name = "bevy_auto_nav_viz"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Kevin Chen <chen.kevin.f@gmail.com>"]
description = "A Bevy plugin that provides visualization for the auto directional navigation system in Bevy's UI Framework."
repository = "https://github.com/kfc35/bevy_auto_nav_viz"
readme = "README.md"
keywords = ["gamedev", "bevy"]
categories = ["game-development"]
exclude = [
    "assets/*",
]

[dependencies]
bevy = { version = "0.18.0", default-features = false, features = [ 
  "bevy_gizmos", "bevy_input_focus", "bevy_ui"]}

[dev-dependencies]
bevy = { version = "0.18.0", default-features = false, features = ["ui", "bevy_gizmos_render"]}

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[[example]]
name = "settings"

[[example]]
name = "moving_button"
